service.yaml
apiVersion: v1
kind: Service
metadata:
  name: httpd-24
  namespace: gitops-test
  labels:
    app: httpd-24
spec:
  selector:
    app: httpd-24
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  - name: https
    port: 8443
    targetPort: 8443
  type: ClusterIP
